// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bundler created bundle for react-native-gesture-handler 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 68225,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 65842,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 135925,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": Object {},
  "version": "1.6.0",
}
`;

exports[`bundler creates bundle for @react-navigation/native 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 102430,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 102426,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 107732,
      },
    },
  },
  "name": "@react-navigation/native",
  "peerDependencies": Object {
    "react": "*",
    "react-native": "*",
  },
  "version": "5.7.3",
}
`;

exports[`bundler creates bundle for @react-navigation/stack 1`] = `
Object {
  "files": Object {
    "android": Object {
      "assets/src_views_assets_backicon.png": Object {
        "size": 100,
      },
      "assets/src_views_assets_backicon@1.5x.png": Object {
        "size": 134,
      },
      "assets/src_views_assets_backicon@2x.png": Object {
        "size": 134,
      },
      "assets/src_views_assets_backicon@3x.png": Object {
        "size": 167,
      },
      "assets/src_views_assets_backicon@4x.png": Object {
        "size": 207,
      },
      "assets/src_views_assets_backiconmask.png": Object {
        "size": 913,
      },
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@react-navigation/native",
          "react-native-safe-area-context",
          "AssetRegistry",
          "react-native-gesture-handler",
          "react-native-screens",
          "@react-native-community/masked-view",
        ],
        "size": 99250,
      },
    },
    "ios": Object {
      "assets/src_views_assets_backicon.png": Object {
        "size": 290,
      },
      "assets/src_views_assets_backicon@1.5x.png": Object {
        "size": 373,
      },
      "assets/src_views_assets_backicon@2x.png": Object {
        "size": 405,
      },
      "assets/src_views_assets_backicon@3x.png": Object {
        "size": 761,
      },
      "assets/src_views_assets_backicon@4x.png": Object {
        "size": 812,
      },
      "assets/src_views_assets_backiconmask.png": Object {
        "size": 913,
      },
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@react-navigation/native",
          "react-native-safe-area-context",
          "react-native-gesture-handler",
          "AssetRegistry",
          "react-native-screens",
          "@react-native-community/masked-view",
        ],
        "size": 100224,
      },
    },
    "web": Object {
      "assets/lib_module_views_assets_backicon.png": Object {
        "size": 207,
      },
      "assets/lib_module_views_assets_backiconmask.png": Object {
        "size": 913,
      },
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@react-navigation/native",
          "react-native-safe-area-context",
          "AssetRegistry",
          "react-native-screens",
        ],
        "size": 104418,
      },
    },
  },
  "name": "@react-navigation/stack",
  "peerDependencies": Object {
    "@react-native-community/masked-view": "^0.1.0",
    "@react-navigation/native": "5.0.5",
    "react": "*",
    "react-native": "*",
    "react-native-gesture-handler": "^1.0.0",
    "react-native-safe-area-context": "^0.6.0",
    "react-native-screens": "^2.0.0",
  },
  "version": "5.9.0",
}
`;

exports[`bundler creates bundle for a single platform 1`] = `
Object {
  "files": Object {
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "mobx",
        ],
        "size": 44972,
      },
    },
  },
  "name": "firestorter",
  "peerDependencies": Object {
    "mobx": "^4.0.0",
  },
  "version": "2.0.1",
}
`;

exports[`bundler creates bundle for react-native-screens/native-stack 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "@react-navigation/native",
          "react",
          "react-native-screens",
          "react-native",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 8752,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "@react-navigation/native",
          "react",
          "react-native-screens",
          "react-native",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 8748,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "@react-navigation/native",
          "react",
          "react-native-screens",
          "react-native",
          "react-native/Libraries/ReactNative/AppContainer",
        ],
        "size": 8843,
      },
    },
  },
  "name": "react-native-screens",
  "peerDependencies": Object {
    "react": "*",
    "react-native": "*",
  },
  "version": "2.11.0",
}
`;

exports[`bundler creates bundle for react-native-webview 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
          "react-native/Libraries/BatchedBridge/BatchedBridge",
        ],
        "size": 12080,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 11745,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 1632,
      },
    },
  },
  "name": "react-native-webview",
  "peerDependencies": Object {
    "react-native": "0.64.0",
  },
  "version": "10.9.1",
}
`;

exports[`bundler creates bundle for subpath 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 45801,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 45797,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 115876,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": Object {},
  "version": "1.6.0",
}
`;

exports[`bundler creates bundle for subpath of core package 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [],
        "size": 6813,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [],
        "size": 6809,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [],
        "size": 6809,
      },
    },
  },
  "name": "react-native-web",
  "peerDependencies": Object {
    "react": "^16.5.1",
    "react-dom": "^16.5.1",
  },
  "version": "0.14.4",
}
`;

exports[`bundler externalizes dependencies that are marked as external 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 13725,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 13721,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "@unimodules/core",
          "expo-app-auth",
          "expo-constants",
          "react-native",
        ],
        "size": 13721,
      },
    },
  },
  "name": "expo-google-app-auth",
  "peerDependencies": Object {
    "@unimodules/core": "*",
    "expo-app-auth": "~9.2.0",
    "expo-constants": "*",
    "react": "*",
    "react-native": "*",
  },
  "version": "8.1.3",
}
`;

exports[`bundler externalizes references to react-native-gesture-handler/DrawerLayout 1`] = `
Object {
  "files": Object {
    "ios": Object {
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon.png": Object {
        "size": 290,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@1.5x.png": Object {
        "size": 373,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@2x.png": Object {
        "size": 405,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@3x.png": Object {
        "size": 761,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backicon@4x.png": Object {
        "size": 812,
      },
      "assets/node_modules_reactnavigationstack_lib_module_views_assets_backiconmask.png": Object {
        "size": 1619,
      },
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@react-navigation/native",
          "react-native-screens",
          "react-native-gesture-handler",
          "AssetRegistry",
          "react-native-gesture-handler/DrawerLayout",
        ],
        "size": 219522,
      },
    },
  },
  "name": "react-navigation",
  "peerDependencies": Object {
    "@react-navigation/native": "~3.6.2",
    "react": "*",
    "react-native": "*",
  },
  "version": "3.13.0",
}
`;

exports[`bundler filter aliased react-native dependencies 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
        ],
        "size": 13020,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 8323,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 1513,
      },
    },
  },
  "name": "@react-native-community/datetimepicker",
  "peerDependencies": Object {
    "react": "^16.8.3",
    "react-native": "^0.59.0",
  },
  "version": "3.0.3",
}
`;

exports[`bundler resolves commonly missing peer-deps (prop-types) 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 18064,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 18060,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react-native",
          "react",
        ],
        "size": 18060,
      },
    },
  },
  "name": "react-native-responsive-grid",
  "peerDependencies": Object {},
  "version": "0.32.4",
}
`;

exports[`bundler resolves external source-code references 1`] = `
Object {
  "files": Object {
    "android": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@unimodules/core",
        ],
        "size": 7125,
      },
    },
    "ios": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
          "@unimodules/core",
        ],
        "size": 6505,
      },
    },
    "web": Object {
      "bundle.js": Object {
        "externals": Array [
          "react",
          "react-native",
        ],
        "size": 13673,
      },
    },
  },
  "name": "expo-linear-gradient",
  "peerDependencies": Object {
    "react": "*",
    "react-native": "*",
  },
  "version": "8.2.1",
}
`;
